--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 databases:
   - name: sapna_billing
     databaseName: sapna_billing
-    user: postgres
-    password: Sadatbanu@123
+    user: sapna_billing
     plan: free
 
 services:
