--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,20 @@
 databases:
   - name: sapna_billing
     databaseName: sapna_billing
-    user: sapna_billing
+    user: postgres
     plan: free
 
 services:
   - type: web
-    name: sapna_billing
+    name: sapna-billing-web
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
     # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
     startCommand: "bundle exec rails server"
     envVars:
-      - key: postgresql://postgres:Sadatbanu123@ec2-15-207-254-173.ap-south-1.compute.amazonaws.com:5432/sapna_billing
-        fromDatabase:
-          name: sapna_billing
-          property: connectionString
+      - key: DATABASE_URL
+        value: "postgresql://postgres:Sadatbanu%40123@ec2-15-207-254-173.ap-south-1.compute.amazonaws.com:5432/sapna_billing"
       - key: RAILS_MASTER_KEY
         sync: false
       - key: WEB_CONCURRENCY
