--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: sapna_billing
     databaseName: sapna_billing
-    user: postgres
+    user: sapna_billing
     plan: free
 
 services:
